--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,12 @@
 # *.ipr
 
 # CMake
-cmake-build-*/
+# cmake-build-*/
+*.cmake
+*.ninja*
+cmake-build-*/_deps
+cmake-build-*/CMakeFiles
+cmake-build-*/Testing
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
